Explicitly set the window icon

Apparently, some window managers need the icon to be set explicitly.

BUG: 464229